Update SEO metadata

--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/ico" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Raghuveer Panchagnula</title>
+
+    <title>Raghuveer Panchagnula | JavaScript Developer</title>
+    <meta
+      name="description"
+      content="Freelance React JS Developer for long-term projects and tutoring in React JS, Next JS, and Node.js"
+    />
+    <meta
+      name="keywords"
+      content="React JS developer, Next JS, Node.js, freelance, tutoring, web development"
+    />
+    <link rel="canonical" href="https://www.raghuveertech.com" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
